home-ingress/overlays/prod/assistant/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: assistant
  namespace: home-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: http # ingress-nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - assistant.francisco.com.au
    secretName: assistant-tls
  rules:
    - host: assistant.francisco.com.au
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: assistant
                port:
                  number: 8123
